objects/Commit_History__c.object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ez_Commit_Label__c</fullName>
        <label>Ez-Commit Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Repository__c</fullName>
        <label>Target Repository</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Story__c</fullName>
        <label>Work Story</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Commit History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Revision Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commit Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>